Add word search and all words grid solutions
Added WordSearch.java for LeetCode word search problem and AllWordsFromGrid.java to generate all possible words from a grid using DFS. Also refactored PalindromPartioning.java to use list.removeLast() for backtracking, improving code clarity and correctness.